[bug] prevent double borders on lists

--- a/client/assignments/components/SidebarItem/styles.css
+++ b/client/assignments/components/SidebarItem/styles.css
@@ -5,6 +5,7 @@
   border: 1px solid #000000;
   padding: 2em;
   background-color: inherit;
+  margin-top: -1px;  /* Hack to prevent double-border */
 }
 
 .link {
