--- a/client/assignments/components/Submission/styles.css
+++ b/client/assignments/components/Submission/styles.css
@@ -8,6 +8,7 @@
   align-items: center;
   border: 1px solid #000000;
   padding: 1.5em 3em;
+  margin-top: -1px;  /* Hack to prevent double-border */
 }
 
 .avatar {
@@ -34,6 +35,7 @@
 
 .content {
   border: 1px solid #000000;
+  margin-top: -1px;  /* Hack to prevent double-border */
 }
 
 .content p {
