--- a/client/assignments/containers/Submissions/styles.css
+++ b/client/assignments/containers/Submissions/styles.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   margin: 2em;
   overflow-y: scroll;
+  border-top: 1px solid #000000;  /* Hack to prevent double-border */
 }
 
 .spinner {
